force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationMeta__mdt/Apttus_Base2__UIComponentConfigurationMeta__mdt.object-meta.xml
<CustomObject>
    <label>Apttus UI Component Configuration Meta</label>
    <pluralLabel>Apttus UI Component Configurations Meta</pluralLabel>
</CustomObject>