force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationMeta__mdt/fields/Apttus_Base2__ActionProviders__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__ActionProviders__c</fullName>
    <label>Action Providers</label>
    <length>210</length>
    <type>Text</type>
</CustomField>