force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationMeta__mdt/fields/Apttus_Base2__ComponentConfigId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__ComponentConfigId__c</fullName>
    <externalId>true</externalId>
    <label>Component Config Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>