force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationMeta__mdt/fields/Apttus_Base2__Config__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__Config__c</fullName>
    <label>Config</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>