force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationMeta__mdt/fields/Apttus_Base2__DataProviderClassName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__DataProviderClassName__c</fullName>
    <label>Class name for data provider</label>
    <length>128</length>
    <type>Text</type>
</CustomField>