force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationMeta__mdt/fields/Apttus_Base2__DataProviderPackageName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__DataProviderPackageName__c</fullName>
    <label>Package name for data provider</label>
    <length>128</length>
    <type>Text</type>
</CustomField>