force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationMeta__mdt/fields/Apttus_Base2__Published__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__Published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>