force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationMeta__mdt/fields/Apttus_Base2__TemplateName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__TemplateName__c</fullName>
    <label>Template</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>